--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ print(averageAccuracy)</code></pre>
 <h2>Conclusions</h2>
 <p>This random forest appears to be quite accurate and may suggest a degree of over-fitting. However, based on the cross-validation results and the Kaggle-style test data verification, this model is an effective predictor of how the weightlifting exercise was performed.</p>
 </div>
-<div id="apendix" class="section level2">
-<h2>Apendix</h2>
+<div id="appendix" class="section level2">
+<h2>Appendix</h2>
 <p>Here we show how the sensor fields were obtained for the model.</p>
 <pre class="r"><code>fields &lt;- NULL
 locs &lt;- c(&quot;belt&quot;,&quot;arm&quot;,&quot;dumbbell&quot;,&quot;forearm&quot;)
